[package]
name = "pjhoy"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
directories = "5.0"
chrono = "0.4"
ics = "0.5"
anyhow = "1.0"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"